# agents-study

./: LICENSE  README.md
activity_analysis/: README.md  changes_by_category.py  changes_by_file_type.py  check_file_data_coverage.py  explore_quick_merges.py  language_analysis.py  load_hf_data_polars.py  main_metrics_overview.py  quick_pr_analysis_from_hf.py  quick_reviews_analysis.py  repo_look.py  repo_stars_table.py  side_plots.py  stratified_core_metrics.py  user_vs_bot_analysis.py
activity_analysis/quickwip/: commits_distribution.py  descriptive_stats.py  files_changed_distribution.py  linked_issues_analysis.py  time_to_merge_stratified.py
activity_analysis/rand/: explore_missing_file_data.py  file_data_reconciliation.py  investigate_missing_prs.py  total_changes_summary.py
agents_study/activity_analysis/: README.md  pyproject.toml
agents_study/activity_analysis/plots/: gen_vars.tex
agents_study/activity_analysis/plots/repo_analysis/: repo_stars_table.tex
agents_study/activity_analysis/spoiler/: __init__.py  table_schemas.txt
agents_study/activity_analysis/spoiler/analysis/: language_analysis_files.py  load_hf_data_polars.py  main_metrics_overview.py  merge_rate_stratified.py  pape_vars.py
agents_study/activity_analysis/spoiler/util/: plotting_faceted_bars.py  plotting_helpers.py  plotting_stratified.py  texrendering.py
agents_study/code_change_analysis/: README.md  diffs.py  survival.py
code_change_analysis/: README.md  churn.py  compute_rates.py
data_scraper/: README.md  github_scraper.py  github_scraper_human.py
(+4 files in other folders)
