[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spoiler"
version = "0.1.0"
description = "msr agent analysis"
requires-python = ">=3.12"

dependencies = [
    "requests~=2.32.4",
    "pandas~=2.3.1", 
    "polars~=1.32.3",
    "matplotlib~=3.10.3",
    "seaborn~=0.13.2",
    "numpy~=1.26.4",
    "scipy~=1.16.2",
    "pyarrow~=19.0.1",
    "huggingface_hub~=0.35.3",
    "datasets~=3.1.0",
    "pytest~=8.4.1",
    "pytest-timeout~=2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spoiler*"] 